--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,25 @@ h1 {
   text-align: center;
   padding-top: 40px;
   padding-bottom: 40px;
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-bottom: 30px;
 }
 
+button {
+  padding-bottom: 20px;
+}
+
+.left {
+  color: #ffe6b3;
+}
+
+.leftp {
+  color: white;
+}
 #left4 {
-  background-color: #85e085;
+  background-color: #8cd98c;
+  padding-bottom: 100%
 }
 
 #right8 {
