--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,13 @@ h1 {
 
 button {
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 
+img {
+  width: 200%;
+  display: none;
+}
 .left {
   color: #ffe6b3;
 }
